// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WideTeaser Component should render WideTeaser with Link 1`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox />
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link and CTA (custom Label) 1`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <CTABrick
          color="blue"
          label="Label"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link and CTA 1`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <CTABrick
          color="blue"
          label="More"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link and Picture 1`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 1`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Header
          color="blue"
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title3": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "4rem",
                  "fontWeight": 300,
                  "lineHeight": "1.4em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        >
          Content Management at a new Scale with CoreMedia CaaS
        </Header>
        <Subheader
          color="blue"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Discover the new CoreMedia Headless Services.",
            }
          }
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title6": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "lineHeight": "1.1em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        />
        <CTABrick
          color="blue"
          label="More"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 2`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Header
          color="blue"
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title3": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "4rem",
                  "fontWeight": 300,
                  "lineHeight": "1.4em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        >
          Content Management at a new Scale with CoreMedia CaaS
        </Header>
        <Subheader
          color="blue"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Discover the new CoreMedia Headless Services.",
            }
          }
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title6": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "lineHeight": "1.1em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 3`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Header
          color="blue"
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title3": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "4rem",
                  "fontWeight": 300,
                  "lineHeight": "1.4em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        >
          Content Management at a new Scale with CoreMedia CaaS
        </Header>
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 4`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Subheader
          color="blue"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Discover the new CoreMedia Headless Services.",
            }
          }
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title6": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "lineHeight": "1.1em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 5`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Subheader
          color="blue"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Discover the new CoreMedia Headless Services.",
            }
          }
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title6": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 300,
                  "lineHeight": "1.1em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        />
        <CTABrick
          color="blue"
          label="More"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 6`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <Header
          color="blue"
          theme={
            Object {
              "palette": Object {
                "additional": Object {
                  "white": Object {
                    "color": "rgb(255,255,255)",
                    "text": "rgba(0, 0, 0, 0.87)",
                  },
                },
                "common": Object {},
              },
              "typography": Object {
                "title3": Object {
                  "color": "#000",
                  "fontFamily": "Helvetica, Arial, sans-serif",
                  "fontSize": "4rem",
                  "fontWeight": 300,
                  "lineHeight": "1.4em",
                  "textTransform": "uppercase",
                },
              },
            }
          }
        >
          Content Management at a new Scale with CoreMedia CaaS
        </Header>
        <CTABrick
          color="blue"
          label="More"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Link, Picture and CTA 7`] = `
<OptionalLink
  url="/caas.html"
>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      >
        <CTABrick
          color="blue"
          label="More"
        />
      </TextBoxWrapper>
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Picture (without params) 1`] = `
<OptionalLink>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Picture 1`] = `
<OptionalLink>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser with Picture and CTA 1`] = `
<OptionalLink>
  <TeaserBox>
    <PictureBox
      key="picturebox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
        }
      }
    >
      <PictureBrick
        alt="Globe"
        color="blue"
        key="picture"
        link="coremedia:///image/2656/data"
        ratio="landscape_ratio3x2"
        stretch={true}
        title="Globe"
      />
    </PictureBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      />
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;

exports[`WideTeaser Component should render WideTeaser without CTA 1`] = `
<OptionalLink>
  <TeaserBox>
    <TextBox
      color="blue"
      key="textbox"
      theme={
        Object {
          "breakpoints": Object {
            "min": [Function],
          },
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      <TextBoxWrapper
        theme={
          Object {
            "breakpoints": Object {
              "min": [Function],
            },
          }
        }
      />
    </TextBox>
  </TeaserBox>
</OptionalLink>
`;
